BUG_FIX_WINDOW_CONTROLS_POSITIONING x WINDOW_CONTROLS_ANIMATION_FADE_IN x SEARCH_BAR_INPUT_BUTTON_GAP x SEARCH_BAR_FADE_IN_KEYFRAME_ANIMATION x SEARCH_BAR_BORDER_RADIUS. u1a9b4n3d7v5h3

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0.3rem;
+  border-radius: 10px;
+  animation: fadeUp 1s ease;
 }
 
 .window-controls-macos-traffic-lights {
   display: flex;
+  position: absolute;
+  top: 1rem;
   width: 0.8rem;
   height: 0.8rem;
   animation: fadeUp 1s ease;
@@ -35,13 +40,25 @@ body {
 
 @keyframes fadeUp {
   from {
-    opacity: 0;
+    opacity: 1;
     transform: translateY(40px);
   }
   to {
-    opacity: 1;
+    opacity: 0;
     transform: translateY(0);
   }
+}
+
+.app-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.welcome-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .side-bar {
@@ -53,7 +70,7 @@ body {
   .sidebar-footer {
     position: absolute;
     width: fit-content;
-    padding-bottom: 2%;
+    padding-bottom: 1%;
     bottom: 0;
     width: 70%;
   }
